added jsoup dependency and used it for a first small example

--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -2,4 +2,6 @@ self: play -> play-testutils 0.1
 
 require:
     - play
-	- org.easytesting           -> fest-assert     1.4
+    - org.easytesting           -> fest-assert     1.4
+    - org.jsoup                 -> jsoup           1.6.1
+
