removed all play-testutils references

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="play-testutils" default="build" basedir=".">
+<project name="litmus" default="build" basedir=".">
 
     <target name="check" unless="play.path">
         <fail message="Please specify Play framework path using -Dplay.path=/path/to/framework/home" />
@@ -29,10 +29,10 @@
                 <include name="**/play.static"/>
             </fileset>
         </copy>
-        <jar destfile="lib/play-play-testutils.jar" basedir="tmp/classes">
+        <jar destfile="lib/play-litmus.jar" basedir="tmp/classes">
             <manifest>
                 <section name="Play-module">
-                    <attribute name="Specification-Title" value="play-testutils"/>
+                    <attribute name="Specification-Title" value="litmus"/>
                 </section>
             </manifest>
         </jar>
