moved sample project to samples folder under litmus repo

--- a/samples/conf/dependencies.yml
+++ b/samples/conf/dependencies.yml
@@ -9,6 +9,6 @@ require:
 repositories:
     - My modules:
         type:       local
-        artifact:   ${application.path}/../[module]
+        artifact:   ${application.path}/../../[module]
         contains:
             - litmus
