added webdriver dependency + first working webdriver test

--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -1,7 +1,7 @@
-self: play -> litmus 0.1
+self: play -> litmus 0.1.1
 
 require:
     - play
     - org.easytesting           -> fest-assert     1.4
     - org.jsoup                 -> jsoup           1.6.1
-
+    - org.seleniumhq.selenium   -> selenium-java   2.21.0
