--- a/samples/conf/application.conf
+++ b/samples/conf/application.conf
@@ -197,7 +197,7 @@ mail.smtp=mock
 # ~~~~~
 # Default to 1 thread in DEV mode or (nb processors + 1) threads in PROD mode.
 # Try to keep a low as possible. 1 thread will serialize all requests (very useful for debugging purpose)
-# play.pool=3
+play.pool=2
 
 # Open file from errors pages
 # ~~~~~
