added bootstrap and first go at new testrunner

--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -2,6 +2,8 @@ self: play -> litmus 0.2-SNAPSHOT
 
 require:
     - play
+    - play                      -> less            0.9.1
     - org.easytesting           -> fest-assert     1.4
     - org.jsoup                 -> jsoup           1.6.1
     - org.seleniumhq.selenium   -> selenium-java   2.21.0
+
