added property to disable litmus test runner

--- a/samples/conf/application.conf
+++ b/samples/conf/application.conf
@@ -193,6 +193,8 @@ mail.smtp=mock
 # Size of the Jobs pool
 # play.jobs.pool=10
 
+# litmus.runner=false
+
 # Execution pool
 # ~~~~~
 # Default to 1 thread in DEV mode or (nb processors + 1) threads in PROD mode.
