added support for builders

--- a/samples/conf/dependencies.yml
+++ b/samples/conf/dependencies.yml
@@ -4,7 +4,11 @@ require:
     - play
     - play     -> secure
     - litmus   -> litmus
-    - com.google.guava          -> guava           11.0.1
+    - org.easytesting           -> fest-assert     1.4
+    - org.jsoup                 -> jsoup           1.6.1
+    - org.seleniumhq.selenium   -> selenium-java   2.21.0
+    - com.google.guava          -> guava           11.0.2
+
 
 repositories:
     - My modules:
